--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    padding: 2rem;
+    background-color: rgb(32, 32, 32);
+    color: #fff;
+}
+
+button {
+    padding: 0.8rem;
+    border: none;
+    border-radius: 0.4rem;
+    background-color: cadetblue;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+}
