--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 body {
     color: #fff;
     background-color: rgb(32, 32, 32);
+    padding: 2rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 button {
